# knight

./: .agent.md  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.sh
.github/workflows/: ci.yml  pages.yml  release.yml
careerflow/: .env.example  README.md  jest.config.js  package-lock.json  package.json  popup.html  tailwind.config.js  tsconfig.json
careerflow/src/: background.ts  content.ts  pdf-parse.d.ts
careerflow/src/assets/: icon-script.ts
careerflow/src/background/: alarm-manager.ts  background.ts  gmail-client.ts  resume-parser-service.ts  service-worker.ts
careerflow/src/content/: autofill-controller.ts  autofill-overlay.tsx  field-scanner.ts
careerflow/src/lib/: application-tracker.ts  db.ts  email-classifier.ts  field-mapper.ts  followup-generator.ts  ollama-client.ts  profile-safety.ts  profile-schema.ts  resume-parser.ts  runtime-client.ts  storage-manager.ts  supported-portals.ts  types.ts
careerflow/src/popup/: TabErrorBoundary.tsx  index.tsx
careerflow/tests/: setup.ts
careerflow/tests/fixtures/: sample-emails.ts  sample-resume.json
careerflow/tests/integration/: autofill.test.ts
careerflow/tests/unit/: email-classifier.test.ts  field-mapper.test.ts  resume-parser-service.test.ts  resume-parser.test.ts  storage-manager.test.ts
docs/: index.html  styles.css
resume-parser-sidecar/: README.md  pyproject.toml
resume-parser-sidecar/resume_parser_sidecar/: app.py  extraction.py  langextract_runner.py  models.py  providers.py
resume-parser-sidecar/scripts/: run.sh  setup-venv.sh
resume-parser-sidecar/tests/: test_service.py
(+33 files in other folders)
